juniper-from-schema/tests/compile_fail/invalid_date_time_scalar_directive.stderr
error: proc macro panicked
  --> $DIR/invalid_date_time_scalar_directive.rs:6:1
   |
6  | / juniper_from_schema::graphql_schema! {
7  | |     schema {
8  | |         query: Query
9  | |     }
...  |
15 | |     scalar DateTimeUtc @juniper(with_time_zone: "foobar")
16 | | }
   | |_^
   |
   = help: message:

           error: Unsupported directive.
            --> schema:3:1
             |
           3 |    @ juniper(with_time_zone : "foobar")
             |    ^

           Invalid type. Expected `Boolean`, got `String`

           aborting due to previous error

error[E0405]: cannot find trait `QueryFields` in this scope
  --> $DIR/invalid_date_time_scalar_directive.rs:20:6
   |
20 | impl QueryFields for Query {
   |      ^^^^^^^^^^^ not found in this scope
